fixing spacing on application

--- a/petsApp/public/styles/style.css
+++ b/petsApp/public/styles/style.css
@@ -132,7 +132,7 @@ body{
 }
 
 
-#nameBox, #emailBox, #addressBox, #phoneBox, #petBox{
+#emailBox, #addressBox, #phoneBox, #petBox{
   margin-bottom: 30px;
   margin-top: 15px;
   margin-left: 15px;
@@ -140,6 +140,13 @@ body{
   width: 500px;
 }
 
+#nameBox{
+  margin-top: 50px;
+  margin-left: 100px;
+  padding: 5px;
+  width: 500px;
+  margin-bottom: 30px;
+}
 .appForm{
   display:block;
   left: 50%;
@@ -164,6 +171,7 @@ body{
 
 #applicationList, #appListTitle{
   margin: 20px;
+  margin-left: 100px;
 }
 
 #indexDIV, #aboutDIV{
@@ -177,4 +185,8 @@ body{
   margin: 3px;
   width: 250px;
   justify-content: space-around;
+}
+
+#submit {
+  margin-left: 100px;
 }
